.provarCaches/00D5f000005vwGkEAI/objects/rstkf__finstmttmpltest__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_finstmttmpltest</customHelpPage>
    <description>finstmttmpltest__c</description>
    <fields>
        <fullName>rstkf__finstmttmpltest_alldefinedtemplates__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, every balance sheet and P &amp; L template for the Report Company will be tested</inlineHelpText>
        <label>Test all Balance Sheet and P&amp;L Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_alldiv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When &quot;Report Scope&quot; is &quot;Single Division&quot; and Template to test does not contains division then template will be tested against all divisions.</description>
        <inlineHelpText>If the selected template (Template to Test) is division-specific and this is checked, all divisions that received postings will be tested.</inlineHelpText>
        <label>Test for All Divisions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_allprojs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When &quot;Report Scope&quot; is &quot;Single Project&quot; and Template to test does not contains project then template will be tested against all projects.</description>
        <inlineHelpText>If the selected template (Template to Test) is project-specific and this is checked, all projects that received postings will be tested.</inlineHelpText>
        <label>Test for All Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_cmpno__c</fullName>
        <inlineHelpText>Displayed only. This is the user’s current company and the company that owns the templates to be tested.</inlineHelpText>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displayed only. This is the user’s current company and the company that owns the templates to be tested.</inlineHelpText>
        <label>Report Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Test Report Templates for Completeness</relationshipLabel>
        <relationshipName>finstmttmpltests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When &quot;Report Scope&quot; is &quot;Single Division&quot; and Template to test contains division then this will be the division for which template needs to be tested.</description>
        <inlineHelpText>If the selected template (Template to Test) is division-specific and Test for All Divisions is not checked, this is the division to test.</inlineHelpText>
        <label>Division for Template Test</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Test Report Templates for Completeness</relationshipLabel>
        <relationshipName>finstmttmpltests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_errmessages__c</fullName>
        <label>Error messages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the year whose data will be tested against the template</inlineHelpText>
        <label>Effective Year for Test</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Test Report Templates for Completeness</relationshipLabel>
        <relationshipName>finstmttmpltests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_iserror__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test has errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When &quot;Report Scope&quot; is &quot;Single Project&quot; and Template to test contains project then this will be the project for which template needs to be tested.</description>
        <inlineHelpText>If the selected template (Template to Test) is project-specific and Test for All projects is not checked, this is the project to test.</inlineHelpText>
        <label>Project for Template Test</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Test Report Templates for Completeness</relationshipLabel>
        <relationshipName>finstmttmpltests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_reporttype__c</fullName>
        <inlineHelpText>If Test all Balance Sheet and P&amp;L Templates is not checked, this is the type of report template to test</inlineHelpText>
        <label>Report Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_scope__c</fullName>
        <inlineHelpText>Displayed only. This is the scope of the selected template (Template to Test).</inlineHelpText>
        <label>Report Scope</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_successmsg__c</fullName>
        <label>Success message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Test all Balance Sheet and P&amp;L Templates is not checked, this is the specific template to test</inlineHelpText>
        <label>Template to Test</label>
        <referenceTo>rstkf__glfstmplt1__c</referenceTo>
        <relationshipLabel>Test Report Templates for Completeness</relationshipLabel>
        <relationshipName>finstmttmpltests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_templatename__c</fullName>
        <label>Test Template Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__finstmttmpltest_usrno__c</fullName>
        <label>User number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__finstmttmpltest_company__r.Name &amp; &apos;-&apos; &amp;  rstkf__finstmttmpltest_glyear__r.Name</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Test Report Templates for Completeness</label>
    <listViews>
        <fullName>rstkf__RS_Test_Report_Templates_for_Completeness</fullName>
        <columns>NAME</columns>
        <columns>rstkf__finstmttmpltest_company__c</columns>
        <columns>rstkf__finstmttmpltest_template__c</columns>
        <columns>rstkf__finstmttmpltest_scope__c</columns>
        <columns>rstkf__finstmttmpltest_reporttype__c</columns>
        <columns>rstkf__finstmttmpltest_glyear__c</columns>
        <columns>rstkf__finstmttmpltest_alldefinedtemplates__c</columns>
        <columns>rstkf__finstmttmpltest_alldiv__c</columns>
        <columns>rstkf__finstmttmpltest_allprojs__c</columns>
        <columns>rstkf__finstmttmpltest_successmsg__c</columns>
        <columns>rstkf__finstmttmpltest_iserror__c</columns>
        <columns>rstkf__finstmttmpltest_errmessages__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Test Report Templates for Completeness</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Report Templates for Completeness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>